minor changes in notebook

--- a/src/database/60_tables_to_csvs_final.ipynb
+++ b/src/database/60_tables_to_csvs_final.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we extract the data by taking the tables in sql converting to csvs for subsequent analysis. Here we will merge the information that we have on current ICUs. We will also extract the data for various sensitivity analyses.\n",
+    "In this notebook, we extract the data by taking the tables in sql and converting to csvs for subsequent analysis. Here we will merge the information that we have on current ICUs. We will also extract the data for various sensitivity analyses.\n",
     "\n",
     "It is important to note that in our study, this part of the process was not transparent to those developing the models, acting as a \"blind experiment\". This is why later in this notebook we will map the ids found in MIMIC to another set of ids to make reconstruction harder."
    ]
@@ -1441,7 +1441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sepsis.to_csv('../../data/raw/blood_only_sensitivity_48_24.csv',\\\n",
+    "df_sepsis.to_csv('../../data/raw/train/blood_only_sensitivity_48_24.csv',\\\n",
     "                 index=False)"
    ]
   },
@@ -1775,7 +1775,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sepsis.to_csv('../../data/raw/blood_only_sensitivity_24_12.csv',\\\n",
+    "df_sepsis.to_csv('../../data/raw/train/blood_only_sensitivity_24_12.csv',\\\n",
     "                 index=False)"
    ]
   },
@@ -2095,7 +2095,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sepsis.to_csv('../../data/raw/blood_only_sensitivity_12_6.csv',\\\n",
+    "df_sepsis.to_csv('../../data/raw/train/blood_only_sensitivity_12_6.csv',\\\n",
     "                 index=False)"
    ]
   },
@@ -2408,7 +2408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sepsis.to_csv('../../data/raw/blood_only_sensitivity_6_3.csv',\\\n",
+    "df_sepsis.to_csv('../../data/raw/train/blood_only_sensitivity_6_3.csv',\\\n",
     "                 index=False)"
    ]
   },
@@ -2423,7 +2423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also check sensitivity on blood cultures (whether to use all cultures or not), SOFA score (whether to use absolute value or change in score) and CNS component (whether it adds unnecessary noise). For the other sensitivity analysis, we will use a SOFA window of (24,12) for all of them."
+    "We also check sensitivity on blood cultures (whether to use an expanded list rather than only the blood cultures), we will use a SOFA window of (24,12) for this."
    ]
   },
   {
@@ -2742,7 +2742,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sepsis.to_csv('../../data/raw/other_cultures_sensitivity_24_12.csv',\\\n",
+    "df_sepsis.to_csv('../../data/raw/train/other_cultures_sensitivity_24_12.csv',\\\n",
     "                 index=False)"
    ]
   },
