--- a/src/database/70_tables_to_csvs_test_set.ipynb
+++ b/src/database/70_tables_to_csvs_test_set.ipynb
@@ -70,10 +70,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      " ·····\n"
+      "········\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "# Connect to local postgres version of mimic\n",
-    "con = psycopg2.connect(dbname=dbname, user=sqluser, host=\"/tmp/\", password=password)"
+    "con = psycopg2.connect(dbname=dbname, user=sqluser, host=\"localhost\", password=password)"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "outputs": [],
    "source": [
     "Q = \"\"\"select icustay_id, charttime, curr_careunit \n",
-    "from current_icu_test c \n",
+    "from current_icu c \n",
     "order by icustay_id, charttime\"\"\"\n",
     "df_care = execute_query(Q, con, schema_name)"
    ]
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
        "      dtype='object', length=116)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1174,7 @@
        "1048"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
        "2420"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
        "2372"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
        "2355"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1410,7 @@
        "1"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
        "993"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
        "2420"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
        "2372"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1599,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1608,7 +1608,7 @@
        "2355"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
        "1"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1756,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1785,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1824,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1833,7 +1833,7 @@
        "882"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1853,7 @@
        "2420"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1871,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1881,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1890,7 @@
        "2372"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1918,7 +1918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1927,7 +1927,7 @@
        "2355"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1945,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2041,7 +2041,7 @@
        "1"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2052,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2068,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2097,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2116,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2136,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -2145,7 +2145,7 @@
        "671"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2156,7 +2156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2165,7 +2165,7 @@
        "2420"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2193,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2202,7 +2202,7 @@
        "2372"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2213,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2230,7 +2230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2239,7 +2239,7 @@
        "2355"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2257,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2303,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2341,7 +2341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2356,7 +2356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2365,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2374,7 +2374,7 @@
        "1"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2385,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2401,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2430,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2449,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2469,7 +2469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -2478,7 +2478,7 @@
        "995"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2489,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -2498,7 +2498,7 @@
        "2420"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2516,7 +2516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2526,7 +2526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -2535,7 +2535,7 @@
        "2372"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2546,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2563,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -2572,7 +2572,7 @@
        "2355"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2590,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2603,7 +2603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -2636,7 +2636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2646,7 +2646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2655,10 +2655,11 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "sepsis",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sepsis"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2670,7 +2671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
